; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/dsm/extr_sd.c_entry_item_append.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/dsm/extr_sd.c_entry_item_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }
%struct.entry_item = type { i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32*, i32*)* @entry_item_append to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @entry_item_append(%struct.TYPE_5__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca %struct.entry_item*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %7, align 8
  %12 = call %struct.entry_item* @calloc(i32 1, i32 16)
  store %struct.entry_item* %12, %struct.entry_item** %8, align 8
  %13 = load %struct.entry_item*, %struct.entry_item** %8, align 8
  %14 = icmp ne %struct.entry_item* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  br label %32

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load %struct.entry_item*, %struct.entry_item** %8, align 8
  %19 = getelementptr inbounds %struct.entry_item, %struct.entry_item* %18, i32 0, i32 1
  store i32* %17, i32** %19, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load %struct.entry_item*, %struct.entry_item** %8, align 8
  %22 = getelementptr inbounds %struct.entry_item, %struct.entry_item* %21, i32 0, i32 0
  store i32* %20, i32** %22, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @input_item_Hold(i32* %23)
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load %struct.entry_item*, %struct.entry_item** %8, align 8
  %28 = call i32 @vlc_array_append_or_abort(i32* %26, %struct.entry_item* %27)
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @services_discovery_AddItem(%struct.TYPE_5__* %29, i32* %30)
  br label %32

32:                                               ; preds = %16, %15
  ret void
}

declare dso_local %struct.entry_item* @calloc(i32, i32) #1

declare dso_local i32 @input_item_Hold(i32*) #1

declare dso_local i32 @vlc_array_append_or_abort(i32*, %struct.entry_item*) #1

declare dso_local i32 @services_discovery_AddItem(%struct.TYPE_5__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
